--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "react": "^17.0.0",
+    "react-admin": "^3.19.3",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
