--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-admin": "^3.19.3",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
